2005-12-31  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	A C/figures/gnome-dictionary-add-source.png
	A C/figures/gnome-dictionary-applet-window.png
	A C/figures/gnome-dictionary-preferences-print.png
	A C/figures/gnome-dictionary-preferences-source.png

	* C/figures/*: add new figures for the manual.

	* C/gnome-dictionary.xml: fix find buttons name.

2005-12-31  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	A C/figures/gnome-dictionary-find.png
	A C/figures/gnome-dictionary-lookup.png
	D C/figures/gnome-dictionary-preferences-1.png
	D C/figures/gnome-dictionary-preferences-2.png

	* C/gnome-dictionary.xml: first rough version of the manual layout.

2005-12-21  Dennis Cranston  <dennis_cranston@yahoo.com>

	* C/gnome-dictionary.xml:  Fix bug #318992, update the scrollkeeper 
	description.

2005-12-07  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* C/gnome-dictionary.xml: add a stub user's manual, so that
	gnome-doc-utils won't complain about an empty file

	* C/figures/gnome-dictionary-application.png: add image

2005-12-07  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* C/gnome-dictionary.xml: fix stupid typo in the filename.

2005-12-07  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* gnome-dictionary.omf.in: ad OMF template

	* Makefile.am: add gnome-doc-utils Makefile template

	* C/figures, C/gnome-dictionary.xml, C/legal.xml: add documentation
	stub files and directories.