@@ -1,3 +1,8 @@
+2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* C/gnome-dictionary.xml: finished the first revision of the user's
+	manual.
+
 2005-12-31  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	A C/figures/gnome-dictionary-add-source.png
